tests/snapshots/optimization_conformance__borrowed_parameters_before.snap
---
source: tests/optimization_conformance.rs
expression: before
---
@read_while_borrowing:
%1 = tribute_rt.retain %0 : core.ptr
tribute_rt.release %0 {alloc_size = 0}
%10 = tribute_rt.retain %9 : core.ptr
tribute_rt.release %0 {alloc_size = 0}
tribute_rt.release %9 {alloc_size = 0}
