tests/snapshots/optimization_conformance__done_continuation_dedup_after.snap
---
source: tests/optimization_conformance.rs
expression: focused_identity_done_ir(&after)
---
func.func @"done_continuation_dedup_snapshot::__lambda_0"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
%1 = closure.new %0 {func_ref = @"done_continuation_dedup_snapshot::__lambda_0"} : !t0
%1 = closure.new %0 {func_ref = @"done_continuation_dedup_snapshot::__lambda_0"} : !t0
%1 = closure.new %0 {func_ref = @"done_continuation_dedup_snapshot::__lambda_0"} : !t0
