tests/snapshots/optimization_conformance__done_continuation_dedup_before.snap
---
source: tests/optimization_conformance.rs
expression: focused_identity_done_ir(&before)
---
func.func @"done_continuation_dedup_snapshot::__lambda_0"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
func.func @"done_continuation_dedup_snapshot::__lambda_1"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
func.func @"done_continuation_dedup_snapshot::__lambda_2"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
func.func @"done_continuation_dedup_snapshot::__lambda_3"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
func.func @"done_continuation_dedup_snapshot::__lambda_4"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
func.func @"done_continuation_dedup_snapshot::__lambda_5"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
%5 = closure.new %4 {func_ref = @"done_continuation_dedup_snapshot::__lambda_0"} : !t0
%15 = closure.new %14 {func_ref = @"done_continuation_dedup_snapshot::__lambda_4"} : !t0
%24 = closure.new %23 {func_ref = @"done_continuation_dedup_snapshot::__lambda_5"} : !t0
%35 = closure.new %34 {func_ref = @"done_continuation_dedup_snapshot::__lambda_1"} : !t0
%41 = closure.new %40 {func_ref = @"done_continuation_dedup_snapshot::__lambda_2"} : !t0
%50 = closure.new %49 {func_ref = @"done_continuation_dedup_snapshot::__lambda_3"} : !t0
