tests/snapshots/optimization_conformance__paired_rc_elimination_before.snap
---
source: tests/optimization_conformance.rs
expression: before
---
%3 = tribute_rt.retain %1 : core.ptr
%4 = tribute_rt.retain %2 : core.ptr
tribute_rt.release %1 {alloc_size = 0}
%3 = tribute_rt.retain %1 : core.ptr
%4 = tribute_rt.retain %2 : core.ptr
tribute_rt.release %1 {alloc_size = 0}
%12 = tribute_rt.retain %2 : core.ptr
tribute_rt.release %2 {alloc_size = 0}
%59 = tribute_rt.retain %58 : core.ptr
tribute_rt.release %53 {alloc_size = 0}
tribute_rt.release %58 {alloc_size = 0}
%69 = tribute_rt.retain %68 : core.ptr
tribute_rt.release %68 {alloc_size = 0}
tribute_rt.release %80 {alloc_size = 0}
%3 = tribute_rt.retain %1 : core.ptr
%4 = tribute_rt.retain %2 : core.ptr
%7 = tribute_rt.retain %6 : core.ptr
tribute_rt.release %1 {alloc_size = 0}
tribute_rt.release %2 {alloc_size = 0}
%17 = tribute_rt.retain %6 : core.ptr
tribute_rt.release %6 {alloc_size = 0}
tribute_rt.release %37 {alloc_size = 12}
%3 = tribute_rt.retain %1 : core.ptr
%4 = tribute_rt.retain %2 : core.ptr
tribute_rt.release %1 {alloc_size = 0}
%12 = tribute_rt.retain %2 : core.ptr
tribute_rt.release %2 {alloc_size = 0}
%6 = tribute_rt.retain %1 : core.ptr
%7 = tribute_rt.retain %2 : core.ptr
%8 = tribute_rt.retain %5 : core.ptr
tribute_rt.release %1 {alloc_size = 0}
tribute_rt.release %5 {alloc_size = 0}
tribute_rt.release %2 {alloc_size = 0}
tribute_rt.release %40 {alloc_size = 12}
%51 = tribute_rt.retain %50 : core.ptr
tribute_rt.release %45 {alloc_size = 0}
tribute_rt.release %50 {alloc_size = 0}
%60 = tribute_rt.retain %59 : core.ptr
%71 = tribute_rt.retain %59 : core.ptr
tribute_rt.release %59 {alloc_size = 0}
tribute_rt.release %2 {alloc_size = 0}
tribute_rt.release %96 {alloc_size = 0}
%107 = tribute_rt.retain %106 : core.ptr
tribute_rt.release %101 {alloc_size = 0}
tribute_rt.release %106 {alloc_size = 0}
%116 = tribute_rt.retain %115 : core.ptr
%127 = tribute_rt.retain %115 : core.ptr
tribute_rt.release %115 {alloc_size = 0}
%3 = tribute_rt.retain %1 : core.ptr
%4 = tribute_rt.retain %2 : core.ptr
%9 = tribute_rt.retain %8 : core.ptr
tribute_rt.release %1 {alloc_size = 0}
tribute_rt.release %2 {alloc_size = 0}
tribute_rt.release %8 {alloc_size = 0}
tribute_rt.release %19 {alloc_size = 12}
%3 = tribute_rt.retain %1 : core.ptr
%4 = tribute_rt.retain %2 : core.ptr
tribute_rt.release %1 {alloc_size = 0}
%14 = tribute_rt.retain %2 : core.ptr
tribute_rt.release %2 {alloc_size = 0}
%3 = tribute_rt.retain %1 : core.ptr
%4 = tribute_rt.retain %2 : core.ptr
tribute_rt.release %1 {alloc_size = 0}
%14 = tribute_rt.retain %2 : core.ptr
tribute_rt.release %2 {alloc_size = 0}
tribute_rt.release %12 {alloc_size = 0}
tribute_rt.release %13 {alloc_size = 0}
tribute_rt.release %4 {alloc_size = 0}
tribute_rt.release %4 {alloc_size = 0}
tribute_rt.release %4 {alloc_size = 0}
