tests/snapshots/optimization_conformance__temporary_field_borrows_after.snap
---
source: tests/optimization_conformance.rs
expression: after
---
%1 = tribute_rt.retain %0 : core.ptr
tribute_rt.release %0 {alloc_size = 0}
tribute_rt.release %7 {alloc_size = 0}
