tests/snapshots/optimization_conformance__temporary_field_borrows_before.snap
---
source: tests/optimization_conformance.rs
expression: before
---
@read_nested:
%1 = tribute_rt.retain %0 : core.ptr
%8 = tribute_rt.retain %7 : core.ptr
tribute_rt.release %0 {alloc_size = 0}
tribute_rt.release %7 {alloc_size = 0}
