tests/snapshots/optimization_conformance__trusted_ownership_forwarding_elided.snap
---
source: tests/optimization_conformance.rs
expression: "if elided.is_empty() { \"<no RC ops>\" } else { &elided }"
---
tribute_rt.release %7 {alloc_size = 0}
