tests/snapshots/optimization_conformance__trusted_ownership_forwarding_preserved.snap
---
source: tests/optimization_conformance.rs
expression: preserved
---
@read_middle:
%1 = tribute_rt.retain %0 : core.ptr
tribute_rt.release %0 {alloc_size = 0}
